<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="prefs">myeatherpreferences</string>
    <string name="app_name">My Local Weather</string>
    <string name="action_settings">Settings</string>
    <string name="city_input">Enter a city or zipcode</string>
    <string name="city_weather_search">FIND CURRENT WEATHER</string>
    <string name="city_forecast_search">5 DAY FORECAST</string>
    <string name="five_day_forecast_label">5 DAY FORECAST</string>
    <string name="day_1_icon">Day 1</string>
    <string name="day_2_icon">Day 2</string>
    <string name="day_3_icon">Day 3</string>
    <string name="day_4_icon">Day 4</string>
    <string name="day_5_icon">Day 5</string>

    <string name="current_temp">Current Temp</string>
    <string name="wind_label">Wind</string>

    <string name="wi_owm_200">&#xf01e;</string>
    <string name="wi_owm_201">&#xf01e;</string>
    <string name="wi_owm_202">&#xf01e;</string>
    <string name="wi_owm_210">&#xf016;</string>
    <string name="wi_owm_211">&#xf016;</string>
    <string name="wi_owm_212">&#xf016;</string>
    <string name="wi_owm_221">&#xf016;</string>
    <string name="wi_owm_230">&#xf01e;</string>
    <string name="wi_owm_231">&#xf01e;</string>
    <string name="wi_owm_232">&#xf01e;</string>
    <string name="wi_owm_300">&#xf01c;</string>
    <string name="wi_owm_301">&#xf01c;</string>
    <string name="wi_owm_302">&#xf019;</string>
    <string name="wi_owm_310">&#xf017;</string>
    <string name="wi_owm_311">&#xf019;</string>
    <string name="wi_owm_312">&#xf019;</string>
    <string name="wi_owm_313">&#xf01a;</string>
    <string name="wi_owm_314">&#xf019;</string>
    <string name="wi_owm_321">&#xf01c;</string>
    <string name="wi_owm_500">&#xf01c;</string>
    <string name="wi_owm_501">&#xf019;</string>
    <string name="wi_owm_502">&#xf019;</string>
    <string name="wi_owm_503">&#xf019;</string>
    <string name="wi_owm_504">&#xf019;</string>
    <string name="wi_owm_511">&#xf017;</string>
    <string name="wi_owm_520">&#xf01a;</string>
    <string name="wi_owm_521">&#xf01a;</string>
    <string name="wi_owm_522">&#xf01a;</string>
    <string name="wi_owm_531">&#xf01d;</string>
    <string name="wi_owm_600">&#xf01b;</string>
    <string name="wi_owm_601">&#xf01b;</string>
    <string name="wi_owm_602">&#xf0b5;</string>
    <string name="wi_owm_611">&#xf017;</string>
    <string name="wi_owm_612">&#xf017;</string>
    <string name="wi_owm_615">&#xf017;</string>
    <string name="wi_owm_616">&#xf017;</string>
    <string name="wi_owm_620">&#xf017;</string>
    <string name="wi_owm_621">&#xf01b;</string>
    <string name="wi_owm_622">&#xf01b;</string>
    <string name="wi_owm_701">&#xf01a;</string>
    <string name="wi_owm_711">&#xf062;</string>
    <string name="wi_owm_721">&#xf0b6;</string>
    <string name="wi_owm_731">&#xf063;</string>
    <string name="wi_owm_741">&#xf014;</string>
    <string name="wi_owm_761">&#xf063;</string>
    <string name="wi_owm_762">&#xf063;</string>
    <string name="wi_owm_771">&#xf011;</string>
    <string name="wi_owm_781">&#xf056;</string>
    <string name="wi_owm_800">&#xf00d;</string>
    <string name="wi_owm_801">&#xf011;</string>
    <string name="wi_owm_802">&#xf011;</string>
    <string name="wi_owm_803">&#xf012;</string>
    <string name="wi_owm_804">&#xf013;</string>
    <string name="wi_owm_900">&#xf056;</string>
    <string name="wi_owm_901">&#xf01d;</string>
    <string name="wi_owm_902">&#xf073;</string>
    <string name="wi_owm_903">&#xf076;</string>
    <string name="wi_owm_904">&#xf072;</string>
    <string name="wi_owm_905">&#xf021;</string>
    <string name="wi_owm_906">&#xf015;</string>
    <string name="wi_owm_957">&#xf050;</string>

    <string name="wi_owm_day_200">&#xf010;</string>
    <string name="wi_owm_day_201">&#xf010;</string>
    <string name="wi_owm_day_202">&#xf010;</string>
    <string name="wi_owm_day_210">&#xf005;</string>
    <string name="wi_owm_day_211">&#xf005;</string>
    <string name="wi_owm_day_212">&#xf005;</string>
    <string name="wi_owm_day_221">&#xf005;</string>
    <string name="wi_owm_day_230">&#xf010;</string>
    <string name="wi_owm_day_231">&#xf010;</string>
    <string name="wi_owm_day_232">&#xf010;</string>
    <string name="wi_owm_day_300">&#xf00b;</string>
    <string name="wi_owm_day_301">&#xf00b;</string>
    <string name="wi_owm_day_302">&#xf008;</string>
    <string name="wi_owm_day_310">&#xf008;</string>
    <string name="wi_owm_day_311">&#xf008;</string>
    <string name="wi_owm_day_312">&#xf008;</string>
    <string name="wi_owm_day_313">&#xf008;</string>
    <string name="wi_owm_day_314">&#xf008;</string>
    <string name="wi_owm_day_321">&#xf00b;</string>
    <string name="wi_owm_day_500">&#xf00b;</string>
    <string name="wi_owm_day_501">&#xf008;</string>
    <string name="wi_owm_day_502">&#xf008;</string>
    <string name="wi_owm_day_503">&#xf008;</string>
    <string name="wi_owm_day_504">&#xf008;</string>
    <string name="wi_owm_day_511">&#xf006;</string>
    <string name="wi_owm_day_520">&#xf009;</string>
    <string name="wi_owm_day_521">&#xf009;</string>
    <string name="wi_owm_day_522">&#xf009;</string>
    <string name="wi_owm_day_531">&#xf00e;</string>
    <string name="wi_owm_day_600">&#xf00a;</string>
    <string name="wi_owm_day_601">&#xf0b2;</string>
    <string name="wi_owm_day_602">&#xf00a;</string>
    <string name="wi_owm_day_611">&#xf006;</string>
    <string name="wi_owm_day_612">&#xf006;</string>
    <string name="wi_owm_day_615">&#xf006;</string>
    <string name="wi_owm_day_616">&#xf006;</string>
    <string name="wi_owm_day_620">&#xf006;</string>
    <string name="wi_owm_day_621">&#xf00a;</string>
    <string name="wi_owm_day_622">&#xf00a;</string>
    <string name="wi_owm_day_701">&#xf009;</string>
    <string name="wi_owm_day_711">&#xf062;</string>
    <string name="wi_owm_day_721">&#xf0b6;</string>
    <string name="wi_owm_day_731">&#xf063;</string>
    <string name="wi_owm_day_741">&#xf003;</string>
    <string name="wi_owm_day_761">&#xf063;</string>
    <string name="wi_owm_day_762">&#xf063;</string>
    <string name="wi_owm_day_771">&#xf000;</string>
    <string name="wi_owm_day_781">&#xf056;</string>
    <string name="wi_owm_day_800">&#xf00d;</string>
    <string name="wi_owm_day_801">&#xf000;</string>
    <string name="wi_owm_day_802">&#xf000;</string>
    <string name="wi_owm_day_803">&#xf000;</string>
    <string name="wi_owm_day_804">&#xf00c;</string>
    <string name="wi_owm_day_900">&#xf056;</string>
    <string name="wi_owm_day_901">&#xf00e;</string>
    <string name="wi_owm_day_902">&#xf073;</string>
    <string name="wi_owm_day_903">&#xf076;</string>
    <string name="wi_owm_day_904">&#xf072;</string>
    <string name="wi_owm_day_905">&#xf0c4;</string>
    <string name="wi_owm_day_906">&#xf004;</string>
    <string name="wi_owm_day_957">&#xf050;</string>
    <string name="wi_owm_night_200">&#xf02d;</string>
    <string name="wi_owm_night_201">&#xf02d;</string>
    <string name="wi_owm_night_202">&#xf02d;</string>
    <string name="wi_owm_night_210">&#xf025;</string>
    <string name="wi_owm_night_211">&#xf025;</string>
    <string name="wi_owm_night_212">&#xf025;</string>
    <string name="wi_owm_night_221">&#xf025;</string>
    <string name="wi_owm_night_230">&#xf02d;</string>
    <string name="wi_owm_night_231">&#xf02d;</string>
    <string name="wi_owm_night_232">&#xf02d;</string>
    <string name="wi_owm_night_300">&#xf02b;</string>
    <string name="wi_owm_night_301">&#xf02b;</string>
    <string name="wi_owm_night_302">&#xf028;</string>
    <string name="wi_owm_night_310">&#xf028;</string>
    <string name="wi_owm_night_311">&#xf028;</string>
    <string name="wi_owm_night_312">&#xf028;</string>
    <string name="wi_owm_night_313">&#xf028;</string>
    <string name="wi_owm_night_314">&#xf028;</string>
    <string name="wi_owm_night_321">&#xf02b;</string>
    <string name="wi_owm_night_500">&#xf02b;</string>
    <string name="wi_owm_night_501">&#xf028;</string>
    <string name="wi_owm_night_502">&#xf028;</string>
    <string name="wi_owm_night_503">&#xf028;</string>
    <string name="wi_owm_night_504">&#xf028;</string>
    <string name="wi_owm_night_511">&#xf026;</string>
    <string name="wi_owm_night_520">&#xf029;</string>
    <string name="wi_owm_night_521">&#xf029;</string>
    <string name="wi_owm_night_522">&#xf029;</string>
    <string name="wi_owm_night_531">&#xf02c;</string>
    <string name="wi_owm_night_600">&#xf02a;</string>
    <string name="wi_owm_night_601">&#xf0b4;</string>
    <string name="wi_owm_night_602">&#xf02a;</string>
    <string name="wi_owm_night_611">&#xf026;</string>
    <string name="wi_owm_night_612">&#xf026;</string>
    <string name="wi_owm_night_615">&#xf026;</string>
    <string name="wi_owm_night_616">&#xf026;</string>
    <string name="wi_owm_night_620">&#xf026;</string>
    <string name="wi_owm_night_621">&#xf02a;</string>
    <string name="wi_owm_night_622">&#xf02a;</string>
    <string name="wi_owm_night_701">&#xf029;</string>
    <string name="wi_owm_night_711">&#xf062;</string>
    <string name="wi_owm_night_721">&#xf0b6;</string>
    <string name="wi_owm_night_731">&#xf063;</string>
    <string name="wi_owm_night_741">&#xf04a;</string>
    <string name="wi_owm_night_761">&#xf063;</string>
    <string name="wi_owm_night_762">&#xf063;</string>
    <string name="wi_owm_night_771">&#xf022;</string>
    <string name="wi_owm_night_781">&#xf056;</string>
    <string name="wi_owm_night_800">&#xf02e;</string>
    <string name="wi_owm_night_801">&#xf022;</string>
    <string name="wi_owm_night_802">&#xf022;</string>
    <string name="wi_owm_night_803">&#xf022;</string>
    <string name="wi_owm_night_804">&#xf086;</string>
    <string name="wi_owm_night_900">&#xf056;</string>
    <string name="wi_owm_night_901">&#xf03a;</string>
    <string name="wi_owm_night_902">&#xf073;</string>
    <string name="wi_owm_night_903">&#xf076;</string>
    <string name="wi_owm_night_904">&#xf072;</string>
    <string name="wi_owm_night_905">&#xf021;</string>
    <string name="wi_owm_night_906">&#xf024;</string>
    <string name="wi_owm_night_957">&#xf050;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="humidity_label">Humidity</string>
    <string name="pressure_label">Pressure</string>
    <string name="visibility_label">Visibility</string>
    <string name="sunrise_label">Sunrise</string>
    <string name="sunset_label">Sunset</string>
    <string name="hour_button">NEXT 24 HRS</string>
    <string name="map_button">RADAR</string>
    <string name="set_location_label">Set Location</string>
    <string name="about_label">About</string>
    <string name="set_location_button_label">SET DEFAULT LOCATION</string>
    <string name="home_refresh">Refresh</string>

    <string name="about_text">Hello Users, This app was created for my personal development portfolio, The app uses third-party data for weather data. I am not responsible
    for the accuracy of the weather data. Knowing this, please use the app at your own discretion regarding this. Thank you for using the app.
    I hope that the app is somewhat useful for you. Weather and Map Data provided by Open Weather Map and Weather Underground</string>
    <string name="today">Today</string>
    <string name="tonight">Tonight</string>
</resources>
