<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00CCFF">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text=""
        android:textSize="20sp"
        android:paddingStart="5dp"
        android:gravity="start|center"
        android:id="@+id/city_label"
        android:layout_toStartOf="@+id/current_weather"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/holo_blue_dark" />

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/mini_weather"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/wind_label"
        android:layout_below="@+id/city_label"
        android:layout_above="@+id/hour_button">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text=""
            android:id="@+id/weather_description"
            android:width="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="start"
            android:paddingStart="5dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:text=""
            android:id="@+id/weather_icon"
            android:width="100dp"
            android:textSize="72sp"
            android:layout_below="@+id/weather_description"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:gravity="center" />

        <TextView
            android:id="@+id/current_weather"
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="center"
            android:textColor="#ffffffff"
            android:textSize="56sp"
            android:layout_below="@+id/weather_icon"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/other_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/mini_weather"
        android:layout_alignTop="@+id/mini_weather">

        <TextView

            android:id="@+id/humidity_label"
            android:text="@string/humidity_label"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_below="@+id/wind_value"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text=""
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/humidity_value"
            android:textColor="#000000"
            android:layout_toEndOf="@id/humidity_label"
            android:layout_below="@+id/humidity_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <TextView

            android:id="@+id/pressure_label"
            android:text="@string/pressure_label"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textColor="#000000"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:text=""
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:id="@+id/pressure_value"
            android:textColor="#000000"
            android:layout_toEndOf="@id/pressure_label"
            android:layout_below="@+id/pressure_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_marginBottom="5dp" />
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/wind_label"
            android:id="@+id/wind_label"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_below="@+id/pressure_value"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text=""
            android:id="@+id/wind_value"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textColor="#000000"
            android:layout_below="@+id/wind_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp" />


        <TextView
            android:text="@string/sunrise_label"
            android:id="@+id/sunrise_label"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/humidity_value"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text=""
            android:id="@+id/sunrise_value"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textColor="#000000"
            android:layout_below="@+id/sunrise_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp" />

        <TextView
            android:text="@string/sunset_label"
            android:id="@+id/sunset_label"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_below="@+id/sunrise_value"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:textStyle="bold" />

        <TextView
            android:text=""
            android:id="@+id/sunset_value"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textColor="#000000"
            android:layout_below="@+id/sunset_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp" />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/hour_button"
        android:id="@+id/hour_button"
        android:layout_above="@+id/map_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/map_button"
        android:id="@+id/map_button"
        android:layout_alignParentBottom="true" />


</RelativeLayout>